k8s/02-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-pj001-svc
spec:
  selector:
    app: ecom-pj001
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#  type: "NodePort"
