k8s/03-k8s-ingress-routes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: e-commerce-ingress-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  #Gerneral Purpose system
  - match: Host(`e-commerce.apps.chandran-edu.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: e-commerce-svc
      port: 80     
    middlewares:
    - name: e-commerce-middleware
  tls:
    certResolver: myresolver    
    
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: e-commerce-middleware
spec:
  stripPrefix:
    prefixes:
      - /
